--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.application.name=THIRDEYE30-EUREKASERVER
 server.port=${PORT:8003}
 
-thirdeye.uniqueId = ${UNIQUE_ID}
-thirdeye.uniqueCode = ${UNIQUE_CODE}
+thirdeye.uniqueId=${UNIQUE_ID}
+thirdeye.uniqueCode=${UNIQUE_CODE}
 
-eureka.client.service-url.defaultZone=${CURRENT_URL}
-eureka.client.register-with-eureka=true
+
+self.url=${CURRENT_URL:}
+
+eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=true
 eureka.instance.instance-id=${spring.application.name}:${server.port}
