--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=THIRDEYE30-EUREKASERVER
-server.port=${PORT:8003}
-thirdeye.uniqueId=${UNIQUE_ID:1}
-thirdeye.uniqueCode=${UNIQUE_CODE:abcdefgh}
+spring.profiles.active=${PROFILE}
 thirdeye.api.key=${THIRDEYE_API_KEY}
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka
 eureka.server.enable-self-preservation=false
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-self.url=${CURRENT_URL:http://localhost:${server.port}/}
