--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,3 +2,5 @@ server.port=${PORT}
 thirdeye.uniqueId=${UNIQUE_ID}
 thirdeye.uniqueCode=${UNIQUE_CODE}
 self.url=${CURRENT_URL}
+eureka.client.service-url.defaultZone=${SERVER_URL}
+
