--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=THIRDEYE30-EUREKASERVER
 spring.profiles.active=${PROFILE}
 thirdeye.api.key=${THIRDEYE_API_KEY}
 eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 eureka.server.enable-self-preservation=false
 eureka.instance.instance-id=${spring.application.name}:${server.port}
