added eureka summery api

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,4 +2,4 @@ server.port=8003
 thirdeye.uniqueId=1
 thirdeye.uniqueCode=abcdefgh
 self.url=http://localhost:8003
-eureka.client.service-url.defaultZone=http://localhost:${server.port}/eureka/
+eureka.client.service-url.defaultZone=${SERVER_URL_LOCAL}
