--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,4 +3,7 @@ thirdeye.uniqueId=${UNIQUE_ID}
 thirdeye.uniqueCode=${UNIQUE_CODE}
 self.url=${CURRENT_URL}
 eureka.client.service-url.defaultZone=${SERVER_URL}
-
+eureka.instance.prefer-ip-address=false
+eureka.instance.secure-port-enabled=true
+eureka.instance.secure-port=443
+eureka.instance.non-secure-port-enabled=true
