--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.server.enable-self-preservation=false
 eureka.instance.instance-id=${spring.application.name}:${server.port}
-
+thirdeye.bypass.discoveryidentity-name=${DISCOVERY_IDENTITY}
