--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=THIRDEYE30-EUREKASERVER
 spring.profiles.active=${PROFILE}
 thirdeye.api.key=${THIRDEYE_API_KEY}
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.server.enable-self-preservation=false
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 thirdeye.bypass.discoveryidentity-name=${DISCOVERY_IDENTITY}
